(wordstat) fix for super fast word stat realization